--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -17,10 +17,8 @@ body {
   }
 
   .image-container img {
-    width: 100%git;
+    width: 100%;
     height: auto;
-    max-width: none;
-    max-height: none;
     /* position: absolute;
     top: 0;
     left: 0; */
